# mailbreeze-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  error.rs  lib.rs  types.rs
src/resources/: attachments.rs  automations.rs  contacts.rs  emails.rs  lists.rs  mod.rs  verification.rs
