[package]
name = "mailbreeze"
version = "0.2.1"
edition = "2021"
authors = ["MailBreeze <support@mailbreeze.com>"]
description = "Official Rust SDK for MailBreeze - Email Marketing & Transactional Email Platform"
license = "MIT"
repository = "https://github.com/MailBreeze/mailbreeze-rust"
homepage = "https://mailbreeze.com"
documentation = "https://docs.rs/mailbreeze"
readme = "README.md"
keywords = ["email", "marketing", "transactional", "smtp", "api"]
categories = ["api-bindings", "email", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
